[package]
name = "ethers-abirpc"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/solarpx/ethers-abirpc"
homepage = "https://github.com/solarpx/ethers-abirpc"
categories = ["cryptography::cryptocurrencies"]
keywords = ["crypto", "ethers", "ethereum", "web3", "celo"]
description = "ethers-rs provider encapsulation for ethereum smart contrcats"

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
rustc-hex = "2.1.0"
thiserror = "1.0.47"
strum_macros = "0.25.2"
ethers = { version = "2.0.14", features = ["ws"] }
url = "2.4.1"
async-trait = "0.1.74"
